--- a/templates/base.html
+++ b/templates/base.html
@@ -66,14 +66,21 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav gap-3">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Connexion</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-danger" href="#"><i class="bi bi-box-arrow-right"></i> Déconnexion</a>
-        </li>
+        {% if current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> {{ current_user.username }}</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-danger" href="{{ url_for('logout') }}"><i class="bi bi-box-arrow-right"></i> Déconnexion</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login') }}"><i class="bi bi-box-arrow-in-right"></i> Connexion</a>
+          </li>
+        {% endif %}
       </ul>
     </div>
   </div>
